--- a/.env.development
+++ b/.env.development
@@ -2,11 +2,11 @@ REACT_APP_CHAIN_ID = "137"
 
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://cold-old-firefly.matic.quiknode.pro/a20d4fe5e7e4bf3d6d5dde22dc680276d542b2f9/"
+#REACT_APP_NODE_1 = "https://rpc-mainnet.maticvigil.com"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://cold-old-firefly.matic.quiknode.pro/a20d4fe5e7e4bf3d6d5dde22dc680276d542b2f9/"
+REACT_APP_NODE_2 = "https://matic-mainnet.chainstacklabs.com"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://cold-old-firefly.matic.quiknode.pro/a20d4fe5e7e4bf3d6d5dde22dc680276d542b2f9/"
+REACT_APP_NODE_3 = "https://matic-mainnet-full-rpc.bwarelabs.com"
 
