--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@types/styled-components": "^5.1.7",
     "bignumber.js": "^9.0.0",
     "chart.js": "^2.9.4",
-    "eth-multicall": "^1.3.13",
     "iframe-resizer-react": "^1.1.0",
     "lodash": "^4.17.20",
     "node": "^16.3.0",
@@ -58,7 +57,20 @@
     "styled-components": "^5.1.1",
     "typescript": "^4.3.2",
     "universal-cookie": "^4.0.4",
-    "web3": "^1.3.1"
+    "web3": "^1.3.1",
+    
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@walletconnect/web3-provider": "^1.3.1",
+    "axios": "^0.21.0",
+    "eth-multicall": "^1.3.13",
+    "ethers": "^5.0.19",
+    "i18next": "^19.8.2",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "react-i18next": "^11.7.3",
+    "web-vitals": "^0.2.4",
+    "web3modal": "^1.9.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
