adding our custom matic vigil rpc

--- a/.env.production
+++ b/.env.production
@@ -2,12 +2,10 @@ REACT_APP_CHAIN_ID = "137"
 
 
 # 10+ nodes balanced, US/EU
-#REACT_APP_NODE_1 = "https://rpc-mainnet.maticvigil.com"
+REACT_APP_NODE_1 = "https://rpc-mainnet.maticvigil.com/v1/c6c8d7e5a790e294f59bdc86ea4ff8e3bfa5b314"
 
 # 10+ nodes balanced, US/EU
 REACT_APP_NODE_2 = "https://cold-old-firefly.matic.quiknode.pro/"
-# REACT_APP_NODE_2 = "https://matic-mainnet-full-rpc.bwarelabs.com"
 
 # 10+ nodes balanced in each region, global
 REACT_APP_NODE_3 = "https://matic-mainnet.chainstacklabs.com"
-
