--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.7",
+    "axios": "^0.21.1",
     "bignumber.js": "^9.0.0",
     "chart.js": "^2.9.4",
     "iframe-resizer-react": "^1.1.0",
@@ -57,6 +58,7 @@
     "styled-components": "^5.1.1",
     "typescript": "^4.3.2",
     "universal-cookie": "^4.0.4",
+    "use-http": "^1.0.21",
     "web3": "^1.3.1"
   },
   "devDependencies": {
