--- a/.env.production
+++ b/.env.production
@@ -2,12 +2,10 @@ REACT_APP_CHAIN_ID = "137"
 
 
 # 10+ nodes balanced, US/EU
-# REACT_APP_NODE_1 = "https://rpc-mainnet.maticvigil.com/v1/c6c8d7e5a790e294f59bdc86ea4ff8e3bfa5b314"
-REACT_APP_NODE_1 = "https://cold-old-firefly.matic.quiknode.pro/"
+REACT_APP_NODE_1 = "https://rpc-mainnet.maticvigil.com/v1/17b0ee6aaf2584f46b2613a8592afde169366e0d"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://cold-old-firefly.matic.quiknode.pro/"
+REACT_APP_NODE_2 = "https://rpc-mainnet.maticvigil.com/v1/17b0ee6aaf2584f46b2613a8592afde169366e0d"
 
 # 10+ nodes balanced in each region, global
-# REACT_APP_NODE_3 = "https://matic-mainnet.chainstacklabs.com"
-REACT_APP_NODE_3 = "https://cold-old-firefly.matic.quiknode.pro/"
+REACT_APP_NODE_3 = "https://rpc-mainnet.maticvigil.com/v1/17b0ee6aaf2584f46b2613a8592afde169366e0d"
