--- a/package.json
+++ b/package.json
@@ -51,11 +51,14 @@
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
+    "react-particles-js": "^3.5.3",
     "react-redux": "^7.2.2",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "react-twitter-widgets": "^1.9.5",
     "styled-components": "^5.1.1",
+    "tsparticles": "^1.32.0",
     "typescript": "^4.3.2",
     "universal-cookie": "^4.0.4",
     "use-http": "^1.0.21",
