--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "iframe-resizer-react": "^1.1.0",
     "lodash": "^4.17.20",
     "node": "^16.3.0",
+    "particles-bg": "^2.5.5",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
     "react-countdown-circle-timer": "^2.5.3",
