--- a/.env.production
+++ b/.env.production
@@ -2,10 +2,10 @@ REACT_APP_CHAIN_ID = "137"
 
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://cold-old-firefly.matic.quiknode.pro/c4c0303bf642719dd87bc9c5f414d23f094e7dd7/"
+REACT_APP_NODE_1 = "https://polygon-mainnet.infura.io/v3/dc61df1446ab4a0ea241b6b15e584dd8"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://cold-old-firefly.matic.quiknode.pro/c4c0303bf642719dd87bc9c5f414d23f094e7dd7/"
+REACT_APP_NODE_2 = "https://polygon-mainnet.infura.io/v3/dc61df1446ab4a0ea241b6b15e584dd8"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://cold-old-firefly.matic.quiknode.pro/c4c0303bf642719dd87bc9c5f414d23f094e7dd7/"
+REACT_APP_NODE_3 = "https://polygon-mainnet.infura.io/v3/dc61df1446ab4a0ea241b6b15e584dd8"
