--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
+    "react-gtm-module": "^2.0.11",
     "react-particles-js": "^3.5.3",
     "react-redux": "^7.2.2",
     "react-responsive": "^8.2.0",
