--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@crowdin/crowdin-api-client": "^1.10.1",
     "@ethersproject/abi": "^5.0.7",
     "@pancakeswap-libs/uikit": "https://github.com/Poly-Vertex/uikit.git",
+    "@progress/kendo-react-gauges": "^4.8.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -53,6 +54,7 @@
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.8",
     "react-gtm-module": "^2.0.11",
+    "react-minimal-pie-chart": "^8.2.0",
     "react-particles-js": "^3.5.3",
     "react-redux": "^7.2.2",
     "react-responsive": "^8.2.0",
