--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@crowdin/crowdin-api-client": "^1.10.1",
     "@ethersproject/abi": "^5.0.7",
     "@pancakeswap-libs/uikit": "https://github.com/Poly-Vertex/uikit.git",
+    "@progress/kendo-drawing": "^1.11.0",
     "@progress/kendo-react-gauges": "^4.8.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/react": "^17.0.0",
