--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@progress/kendo-drawing": "^1.11.0",
     "@progress/kendo-licensing": "^1.2.0",
     "@progress/kendo-react-gauges": "^4.8.0",
+    "@progress/kendo-react-intl": "^4.8.0",
     "@reduxjs/toolkit": "^1.5.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
