switching to quiknode rpc

--- a/.env.production
+++ b/.env.production
@@ -2,10 +2,10 @@ REACT_APP_CHAIN_ID = "137"
 
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_1 = "https://polygon-mainnet.infura.io/v3/dc61df1446ab4a0ea241b6b15e584dd8"
+REACT_APP_NODE_1 = "https://cold-old-firefly.matic.quiknode.pro/8ac20b00a9349372ed3379caa8866d3fa6f6cd47/"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://polygon-mainnet.infura.io/v3/dc61df1446ab4a0ea241b6b15e584dd8"
+REACT_APP_NODE_2 = "https://cold-old-firefly.matic.quiknode.pro/8ac20b00a9349372ed3379caa8866d3fa6f6cd47/"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://polygon-mainnet.infura.io/v3/dc61df1446ab4a0ea241b6b15e584dd8"
+REACT_APP_NODE_3 = "https://cold-old-firefly.matic.quiknode.pro/8ac20b00a9349372ed3379caa8866d3fa6f6cd47/"
