--- a/.env.development
+++ b/.env.development
@@ -2,11 +2,11 @@ REACT_APP_CHAIN_ID = "137"
 
 
 # 10+ nodes balanced, US/EU
-#REACT_APP_NODE_1 = "https://rpc-mainnet.maticvigil.com"
+#REACT_APP_NODE_1 = "https://polygon-rpc.com/"
 
 # 10+ nodes balanced, US/EU
-REACT_APP_NODE_2 = "https://matic-mainnet.chainstacklabs.com"
+REACT_APP_NODE_2 = "https://polygon-rpc.com/"
 
 # 10+ nodes balanced in each region, global
-REACT_APP_NODE_3 = "https://matic-mainnet-full-rpc.bwarelabs.com"
+REACT_APP_NODE_3 = "https://polygon-rpc.com/"
 
